--- a/.github/workflows/on-tag.yml
+++ b/.github/workflows/on-tag.yml
@@ -19,3 +19,10 @@ jobs:
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
+      - name: Update Homebrew formula
+        uses: dawidd6/action-homebrew-bump-formula@v3
+        with:
+          token: ${{ secrets.PERSONAL_TOKEN }}
+          tap: fabriceclementz/homebrew-replibyte
+          formula: replibyte
+          tag: ${{ github.ref }}
