--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Test RepliByte
         env:
           AWS_REGION: ${{ secrets.AWS_REGION }}
-        run: cargo test --all-features
+        run: cargo test --all-features --test-threads=1
 
       # - name: Bench RepliByte
       #   run: cargo bench
